--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
@@ -23,7 +22,6 @@
     "stylus": "^0.54.5"
   },
   "dependencies": {
-    "choices.js": "^3.0.4",
-    "styleselect": "^1.0.3"
+    "choices.js": "^3.0.4"
   }
 }
